--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,7 +2,8 @@
   "name": "Speech Input for HackMD",
   "author": "G100",
   "version": "0.1",
-  "page_action": {
+  "browser_action": {
+    "default_popup": "popup.html",
     "default_icon": {
       "16": "images/16.png",
       "32": "images/32.png",
@@ -16,8 +17,11 @@
     "48": "images/48.png",
     "128": "images/128.png"
   },
+  "permissions": [
+    "activeTab"
+  ],
   "content_scripts": [{
-    "matches": ["*://hackmd.io/*"],
+    "matches": ["*://*/*"],
     "js": ["content_script.js"]
   }],
   "manifest_version": 2
