--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Speech Input for HackMD",
+  "name": "Speech Input",
   "author": "G100",
-  "version": "0.1",
+  "version": "1.1",
   "browser_action": {
     "default_popup": "popup.html",
     "default_icon": {
